--- a/user-registrtion/src/main/resources/application.properties
+++ b/user-registrtion/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.show-sql=true
 
 
 #EMAIL
-sender.email=aqmoin313@gmail.com
-sender.password=wllgvjjkwajfkqil
+sender.email=
+sender.password=
 
 
 
